# German-Flashcard-Projekt

./: LICENSE  README.md  main.py  project_specs.md  pyproject.toml
app/: evaluator.py  flashcards.json  main.py
app/src/: evaluator.py  main.py
frontend/: app.py  index.html  package-lock.json
frontend/src/: AnnotatedSentence.jsx  App.jsx  FeedbackModal.css  FeedbackModal.jsx  Flashcard.jsx  FlashcardNav.jsx  LandingPage.jsx  Root.jsx  api.js  index.css  main.jsx
testing/: test_evaluator.py
