[project]
name = "German_Flashcard_Projekt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.8.0",
    "fastapi[standard]",
    "uvicorn",
    "pyspellchecker",
    "de-core-news-md @ https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.8.0/de_core_news_md-3.8.0-py3-none-any.whl",
]

[tool.uv]
package = false